feat: Blocked out cart routes and tests
